syntax = "proto2";

option optimize_for = SPEED;

message Cmd {
  required int32 cmdType = 1;
  optional bytes content = 2;
}

message ResultMessage {
  required int32 code = 1;
  optional string msg = 2;
}

message Package {
  optional ResultMessage resultMsg = 1;
  optional int32 cmdType = 2;
  optional bytes content = 3;
}

message PackageGroup {
  repeated Package packages = 1;
}